2005-11-19 Jochen
 Merge7z DllBuild 0017
  Merge7z: StdAfx.h Merge7zCommon.cpp Merge7zCommon.h revision.txt
  Merge7z new files: Merge7z430.dsp
  Merge7zInstaller: Files.rc2 Installer.cpp Merge7zInstaller.dsp

2005-11-18 Kimmo
 PATCH: [ 1358408 ] Import and export for options
  Src: Merge.rc resource.h
  Src/Common: OptionsMgr.cpp OptionsMgr.h PreferencesDlg.cpp PreferencesDlg.h
  Src/Languages: *.rc resource.h

2005-11-17 Kimmo
 PATCH: [ 1349645 ] Folder Compare Statistics dialog
 PATCH: [ 1347787 ] Use non-modal dialog for dir compare status
  Src: DirDoc.cpp DirDoc.h DirFrame.cpp DirFrame.h DirView.cpp DirView.h Merge.cpp Merge.dsp
   Merge.rc resource.h
  Src new files: CompareStatisticsDlg.cpp CompareStatisticsDlg.h DirCompProgressDlg.cpp
   DirCompProgressDlg.h
  Src deleted files: DirCompStateBar.cpp DirCompStateBar.h
  Src/res new file: sigma.bmp
  Src/Languages: *.rc resource.h


2005-11-16
 PATCH: [ 1356783 ] Use OptionsMgr in SyntaxColors class
  Src: MainFrm.cpp SyntaxColors.cpp SyntaxColors.h

2005-11-09 Kimmo
 PATCH: [ 1350638 ] Move options read/write code to options panels
  Src: MainFrm.cpp Merge.dsp PropArchive.cpp PropArchive.h PropCodepage.cpp PropCodepage.h
   PropColors.cpp PropColors.h PropCompare.cpp PropCompare.h PropEditor.cpp PropEditor.h
   PropGeneral.cpp PropGeneral.h PropRegistry.cpp PropRegistry.h PropVss.cpp PropVss.h
  Src new file: IOptionsPanel.h
  Src/Common: PreferencesDlg.cpp PreferencesDlg.h

2005-11-08 Kimmo
 Merge Perry's fix for OpenDlg/SelectFile() to Merge.cpp/SelectFile() (PATCH #1348733)
  Src: Merge.cpp
 PATCH: [ 1350489 ] Use SelectFile() for external editor selection
  Src: PropRegistry.cpp

2005-11-06 Jochen
 PATCH: [ 1327413 ] Fix bug in CDirDoc::AllowUpwardDirectory()
 Change CDirView::AreItemsOpenable() to consider archive files as openable
  Src: DirActions.cpp DirDoc.cpp DirView.cpp

2005-11-05 Perry
 PATCH: [ 1337905 ] Allow comparing binary files with binary unpacker
  Src: DirView.cpp